<resources>
    <string name="app_name">SmartWindow</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="button_send">Register</string>
    <string name="button_search">Search</string>

    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>

    <string name="request_action">Please choose an action</string>
    <string name="request_ip">Please provide the IP</string>
    <string name="request_details">Please provide the below information</string>
    <string name="request_email">Please provide an email address</string>
    <string name="open_condition">Open blinds for lighting less than</string>
    <string name="close_condition">Close blinds for lighting more than</string>

    <string-array name="types_array">
        <item>Elderly</item>
        <item>Nurse</item>
        <item>Family Member</item>
    </string-array>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_set_condition">SetCondition</string>

</resources>
