<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="coms514.smartwindows.UserRegister">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/text_details"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:padding="20dp"
            android:textSize="25sp"
            android:text="@string/request_details" />

        <EditText android:id="@+id/name"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:textSize="20sp"
            android:hint="@string/name"/>

        <EditText android:id="@+id/age"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:inputType="number"
            android:textSize="20sp"
            android:hint="@string/age" />

        <Spinner
            android:id="@+id/types_spinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:padding="20dp" />

        <RelativeLayout android:id="@+id/RelativeLayout01"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            xmlns:android="http://schemas.android.com/apk/res/android">

            <Button android:id="@+id/button_send"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:textSize="25sp"
                android:layout_centerInParent="true"
                android:text="@string/button_send"
                android:onClick="register" />
        </RelativeLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>