<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="coms514.smartwindow.Consent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="4" >

        <TextView
            android:id="@+id/text_details"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:padding="20dp"
            android:textSize="25sp"
            android:text="@string/request_email" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

         <EditText android:id="@+id/email"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="20dp"
             android:layout_weight="2"
             android:layout_alignParentLeft="true"
             android:hint="@string/email"/>

        <Button
            android:id="@+id/button_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_weight="1"
            android:onClick="search"
            android:padding="20dp"
            android:text="@string/button_search" />

        </LinearLayout>

        <ListView
            android:id="@+id/email_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </ListView>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
